--- a/sass/misc/_variables.scss
+++ b/sass/misc/_variables.scss
@@ -29,7 +29,7 @@ $spacings:(
 /* Font Family */
 $font-principal: 'Verdana, Geneva, Tahoma', sans-serif;
 $font-title: 'Libre Baskerville', serif;
-$font-Product: 'Roboto', sans-serif;
+$font-product: 'Roboto', sans-serif;
 
 /* Font sizes */
 $text-large:  3.0em;
