--- a/public/css/index.css
+++ b/public/css/index.css
@@ -148,7 +148,9 @@ html {
 
 .itemPedido {
   max-width: 700;
+  padding-left: 2px;
+  padding-right: 2px;
   align-items: center; }
 
-.itemCantidad, itemPrecio {
-  align-self: right; }
+.itemCantidad, .itemPrecio {
+  align-content: right; }
