--- a/sass/views/_home.scss
+++ b/sass/views/_home.scss
@@ -122,3 +122,11 @@
 
 }
 
+.offcanvas.offcanvas-end {
+    top: 0;
+    right: 0;
+    width: 450px;
+    border-left: var(--bs-offcanvas-border-width) solid var(--bs-offcanvas-border-color);
+    transform: translateX(100%);
+
+}
