--- a/sass/views/_home.scss
+++ b/sass/views/_home.scss
@@ -70,7 +70,7 @@
 
 .botonFiltro {
     @extend .botonComprar;
-    width: 100px;
+    width: 120px;
     margin: 0px 10px;
 }
 .btnEliminarx {
@@ -141,4 +141,11 @@
       justify-content: flex-end;
       max-height: 50px;
     }
+}
+
+.bg-nav-img {
+    background-image: url(/imgs/logogrande.jpg);
+    background-size: 300;
+    background-repeat: repeat;
+    background-position: left;
 }
